// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider Component renders divider 1`] = `
<DocumentFragment>
  <div
    class="ant-divider ant-divider-horizontal ant-divider-no-default-orientation-margin-left"
    role="separator"
  />
</DocumentFragment>
`;

exports[`Divider Component renders divider with text correctly 1`] = `
<DocumentFragment>
  <div
    class="ant-divider ant-divider-horizontal ant-divider-with-text ant-divider-with-text-left ant-divider-no-default-orientation-margin-left"
    role="separator"
  >
    <span
      class="ant-divider-inner-text"
      style="margin-left: 24px;"
    >
      Some text
    </span>
  </div>
</DocumentFragment>
`;

exports[`Divider Component renders vertical divider correctly 1`] = `
<DocumentFragment>
  <div
    class="ant-divider ant-divider-vertical ant-divider-no-default-orientation-margin-left"
    role="separator"
  />
</DocumentFragment>
`;
